--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,2 +1,5 @@
 <h1><%= @song.title %></h1>
 <h1><%= @song.released %></h1>
+<%= form_tag person_path(@song.id), method: "delete" do %>
+  <%= submit_tag "Delete #{@song.title}" %>
+<% end %>
