--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -2,19 +2,19 @@
     <ul>
         <% form_for @song do |f| %>
             <%= f.label :title %>
-            <li><%= f.text_area :title, @song.title %></li>
+            <li><%= f.text_area :title %></li>
 
             <%= f.label :released %>
-            <li><%= f.text_area :released, @song.released %></li>
+            <li><%= f.text_area :released %></li>
 
             <%= f.label :release_year %>
-            <li><%= f.text_area :release_year, @song.release_year %></li>
+            <li><%= f.text_area :release_year %></li>
 
             <%= f.label :artist_name %>
-            <li><%= f.text_area :artist_name, @song.artist_name %></li>
+            <li><%= f.text_area :artist_name %></li>
 
             <%= f.label :genre %>
-            <li><%= f.text_area :genre, @song.genre %></li>
+            <li><%= f.text_area :genre %></li>
 
             <%= f.submit %>
         <% end %>
