automatically backed up by learn

--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -1,6 +1,6 @@
 <div>
     <ul>
-        <% form_for @song do |f| %>
+        <%= form_for @song do |f| %>
             <%= f.label :title %>
             <li><%= f.text_area :title %></li>
 
