--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -2,19 +2,19 @@
     <ul>
         <%= form_for @song do |f| %>
             <%= f.label :title %>
-            <li><%= f.text_area :title %></li>
+            <%= f.text_area :title %>
 
             <%= f.label :released %>
-            <li><%= f.text_area :released %></li>
+            <%= f.text_area :released %>
 
             <%= f.label :release_year %>
-            <li><%= f.text_area :release_year %></li>
+            <%= f.text_area :release_year %>
 
             <%= f.label :artist_name %>
-            <li><%= f.text_area :artist_name %></li>
+            <%= f.text_area :artist_name %>
 
             <%= f.label :genre %>
-            <li><%= f.text_area :genre %></li>
+            <%= f.text_area :genre %>
 
             <%= f.submit %>
         <% end %>
