automatically backed up by learn

--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -11,10 +11,10 @@
             <%= f.text_area :release_year, @song.release_year %>
 
             <%= f.label :artist_name %>
-            <%= f.text_area :artist_name, @song. %>
+            <%= f.text_area :artist_name, @song.artist_name %>
 
             <%= f.label :genre %>
-            <%= f.text_area :genre %>
+            <%= f.text_area :genre, @song.genre %>
 
             <%= f.submit %>
         <% end %>
