--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -2,19 +2,19 @@
     <ul>
         <%= form_for @song do |f| %>
             <%= f.label :title %>
-            <%= f.text_area_tag :title, @song.title %>
+            <%= f.text_area :title @song.title %>
 
             <%= f.label :released %>
-            <%= f.text_area_tag :released, @song.released %>
+            <%= f.text_area :released @song.released %>
 
             <%= f.label :release_year %>
-            <%= f.text_area_tag :release_year, @song.release_year %>
+            <%= f.text_area :release_year @song.release_year %>
 
             <%= f.label :artist_name %>
-            <%= f.text_area_tag :artist_name, @song.artist_name %>
+            <%= f.text_area :artist_name @song.artist_name %>
 
             <%= f.label :genre %>
-            <%= f.text_area_tag :genre, @song.genre %>
+            <%= f.text_area :genre @song.genre %>
 
             <%= f.submit %>
         <% end %>
