--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -5,7 +5,7 @@
             <%= f.text_field :title %>
             <br>
             <%= f.label :released %>
-            <%= f.text_field :released %>
+            <%= f.check_box :released %>
             <br>
             <%= f.label :release_year %>
             <%= f.text_field :release_year %>
