--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -5,3 +5,25 @@
         <% end %>
     </ul>
 </div>
+<table>
+    <caption>All Songs</caption>
+    <thead>
+        <tr>
+            <th>Songs</th>
+            <th scope="col">Yorkshire</th>
+            <th scope="col">Lancashire</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <th scope="row">Donuts</th>
+            <td>3,000</td>
+            <td>5,000</td>
+        </tr>
+        <tr>
+            <th scope="row">Stationary</th>
+            <td>18,000</td>
+            <td>17,000</td>
+        </tr>
+    </tbody>
+</table>
