--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -9,19 +9,20 @@
     <caption>All Songs</caption>
     <thead>
         <tr>
-            <th>Songs</th>
+            <th>Songs:</th>
         </tr>
     </thead>
     <tbody>
-        <tr>
-            <th scope="row">Donuts</th>
-            <td>3,000</td>
-            <td>5,000</td>
-        </tr>
-        <tr>
-            <th scope="row">Stationary</th>
-            <td>18,000</td>
-            <td>17,000</td>
-        </tr>
+        <% @songs.each do |song| %>
+            <tr>
+                <th><%= song.title %></th>
+                <th><%= song.released %></th>
+                    <% if song.released %>
+                        <th><%= song.release_year %></th>
+                    <% end %>
+                    <th><%= song.artist_name %></th>
+                    <th><%= song.genre %></th>
+            </tr>
+        <% end %>
     </tbody>
 </table>
